# slab

./: .env  .gitignore  Cargo.toml  setup-database.sh
sql/: consultas.sql  gatilho.sql  instancias.sql  tabelas.sql
src/: database_queries.rs  database_types.rs  lib.rs
