[package]
name = "slab"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
iced = { version = "0.13.1", features = ["tokio"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "time", "uuid"] }
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
